# assignment_2

./: .$multi_sensor_assignment.drawio.bkp  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  README.md  SensorData.cpp  SensorData.h  Statistics.cpp  Statistics.h  file_handling.cpp  file_handling.h  main.cpp  measurement.cpp  measurement.h  multi_sensor_assignment.drawio  project_UML.drawio  sensor.cpp  sensor.h  sensor_hub.cpp  sensor_hub.h  statistics.cpp  statistics.h  utility.cpp  utility.h
src/: DataGenerator.cpp  DataGenerator.h  Logger.cpp  Logger.h  Observer.cpp  Observer.h  SensorData.cpp  SensorData.h  SystemController.cpp  SystemController.h  UserInterface.cpp  UserInterface.h  Utils.cpp  Utils.h  measurement.cpp  measurement.h  sensor.cpp  sensor.h  statistics.cpp  statistics.h
